# fluidburn

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
examples/: test.dxf
scripts/: genicon.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  model.rs
src-tauri/src/cam/: boolean.rs  mod.rs
src-tauri/src/gcode/: mod.rs
src-tauri/src/import/: dxf.rs  mod.rs  svg.rs
src-tauri/src/serial/: grbl.rs  mod.rs
src/components/: DevicePanel.tsx  LayerPanel.tsx  MachineForm.tsx  MachinesModal.tsx  Onboarding.tsx  Toolbar.tsx  TransformPanel.tsx  Workspace.tsx
src/lib/: ipc.ts  scene.ts
src/state/: store.ts
